--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-		<!-- Google tag (gtag.js) -->
+		<!-- Google tag (gtag.js)
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-M211RWMNEY"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
@@ -14,7 +14,7 @@
 		  gtag('js', new Date());
 
 		  gtag('config', 'G-M211RWMNEY');
-		</script>
+		</script> -->
         <title>.::Radio Vibra Maturín::.</title>
         <meta charset="utf-8">
    		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
@@ -33,7 +33,7 @@
 		<meta property="og:site_name" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
 		<meta property="og:description" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
 		<meta content="yes" name="apple-mobile-web-app-capable">
-		<meta name="keywords" content="comunastereo929, comunastereo, comuna, comunafm, comuna929, radio, musica, venezuela, cojedes, emisora, latina, 92.9, 929, romantico, informativa, divertida, integral, musical, latina, top40, fm, crossover, caribe, san carlos, caracas, valencia, maracay, republica, live, apple, blackberry, android, playstore, iphone, salsa, nuevo, retro, merengue, reguetton, varios, 24 horas, en vivo, activa, audio, player, instagram, facebook, youtube, x, tropical, @jesusfcoaponte, @comunastereofm">
+		<meta name="keywords" content="Vibra-Maturin, radiovibramaturin, vibramaturin, vibra maturin, radio vibra maturin, radio, musica, venezuela, cojedes, emisora, latina, romantico, informativa, divertida, integral, musical, latina, top40, fm, crossover, caribe, san carlos, caracas, valencia, maracay, republica, live, apple, blackberry, android, playstore, iphone, salsa, nuevo, retro, merengue, reguetton, varios, 24 horas, en vivo, activa, audio, player, instagram, facebook, youtube, x, tropical, @jesusfcoaponte, @radiovibramaturin, facebook, instagram, tiktok, whatsapp">
 	</head>
 
 	<style>A {text-decoration: none;}</style>
@@ -84,39 +84,45 @@
 		<!-- Redes Sociales -->
         <div class="slideshow-container" style="text-align: center; line-height:0;">
 
-        	<a href="" target="_blank">
-        		<img src="img/bottom/bottom-tiktok.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" style="width:120px">
-        	</a>
-
         	<!-- <a href="" target="_blank">
         		<img src="img/bottom/bottom-x.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" style="width:120px">
         	</a> -->
 
-            <a href="" target="_blank">
-                <img src="img/bottom/bottom-facebook.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="facebook.webp/" style="width:120px">
-            </a>
-
-            <!-- <a href="https://www.threads.net/@comunastereofm" target="_blank">
+        	<!-- <a href="https://www.threads.net/@comunastereofm" target="_blank">
                 <img src="img/bottom/bottom-threads.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="instagram.webp/" style="width:120px">
             </a> -->
 
-            <a href="#" target="_blank">
-                <img src="img/bottom/bottom-youtube.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="googleplay.webp/" style="width:120px">
+            <a href="https://www.facebook.com/people/Vibra-Maturin/pfbid033d22e1pJmUGwXenzgiFoVxzpENn4LjfDBddX6nf2KCP1zEYoaiDZAYbL4pTwve4Zl/" target="_blank">
+                <img src="img/bottom/bottom-facebook.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="facebook.webp/" style="width:120px">
             </a>
 
-            <!-- <a href="https://play.google.com/store/apps/details?id=cxmuna.stereo" target="_blank">
+            <a href="https://www.tiktok.com/@radio.vibra?_t=ZM-90rBIJSp2Tr&_r=1" target="_blank">
+        		<img src="img/bottom/bottom-tiktok.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" style="width:120px">
+        	</a>
+
+            <a href="#" target="_blank">
+                <img src="img/bottom/bottom-youtube.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="youtube.webp/" style="width:120px">
+            </a>
+
+            <a href="https://api.whatsapp.com/send?phone=584249596873&text=Hola%20estoy%20escuchando%20Vibra%20Maturín%20" target="_blank">
+                <img src="img/bottom/bottom-whatsapp.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="whatsapp.webp/" style="width:120px">
+            </a>
+
+            <!-- <a href="#" target="_blank">
                 <img src="img/bottom/bottom-playstore.png" onmouseout="this.style.opacity=1; this.filters.alpha.opacity='50';" onmouseover="this.style.opacity=0.5; this.filters.alpha.opacity='20';" alt="" title="googleplay.webp/" style="width:120px">
             </a> -->
         </div>
 
 		<!-- Publicidad Inferior -->
 		<div class="slideshow-container">
-			<a href="#" target="_blank" class="image featured"><img src="img/publicidad-1.png" alt="" style="width:100%"></a>
+			<a href="#" target="_blank" class="image featured"><img src="img/publicidad-2.png" alt="" style="width:100%"></a>
 		</div>
 
+		<!-- Elfsight Instagram Feed | Untitled Instagram Feed -->
 		<div>
-			<script src="https://static.elfsight.com/platform/platform.js" async></script>
-			<div class="elfsight-app-89bf94cf-5751-45aa-8703-eb964f8ee4c3" data-elfsight-app-lazy></div>
+			<!--<iframe allowtransparency="yes" border="0" frameborder="no" width="100%" height="90%" marginheight="0px" marginwidth="0" scrolling="no" src="https://97d555df93034b9ab6af91f97d3db5a2.elf.site/" style="width:100%; height:90vh;"></iframe>-->
+			<script src="https://elfsightcdn.com/platform.js" async></script>
+			<div class="elfsight-app-97d555df-9303-4b9a-b6af-91f97d3db5a2" data-elfsight-app-lazy></div>
 		</div>
 
 		<!-- Publicidad inferior -->
