--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 		<iframe allowtransparency="yes" border="0" frameborder="no" width="100%" height="90%" marginheight="0px" marginwidth="0" scrolling="no" src="https://player.mipanel.stream/lunaplayer/6750" style="width:100%; height:90vh;">
 		</iframe>
 
-		<!-- widget-reloj
+		<!-- widget-reloj-->
 		<div class="widget-reloj">
 			<iframe allowtransparency="yes" border="0" frameborder="no" height="100%" width="100%" marginheight="0px" marginwidth="0" scrolling="no" src="iframe/reloj.html" style="width:320px; height:100%;"></iframe>
-		</div>-->
+		</div>
 
 		<!-- Redes Sociales -->
         <div class="slideshow-container" style="text-align: center; line-height:0;">
