--- a/index.html
+++ b/index.html
@@ -25,61 +25,27 @@
         <link rel="stylesheet" href="css/main.css">    
         <link rel="manifest" href="/manifest.json">
 		<link rel="preload" href="img/cover.webp" as="image">
-		<link rel="preload" href="img/bg_site.webp" as="image">
-		<link rel="preload" href="/player.html">
-		<meta name="description" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
-		<meta property="og:title" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
+		<link rel="preload" href="img/background.webp" as="image">
+		<link rel="preload" href="player/player-radiovibramaturin.html">
+		<meta name="description" content="Radio Vibra Maturín - ¡Estremece tus sentidos!">
+		<meta property="og:title" content="Radio Vibra Maturín - ¡Estremece tus sentidos!">
 		<meta property="og:image" content="img/cover.webp">
-		<meta property="og:site_name" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
-		<meta property="og:description" content="Comuna Stereo 92.9 FM - La voz de tu comunidad">
+		<meta property="og:site_name" content="Radio Vibra Maturín - ¡Estremece tus sentidos!">
+		<meta property="og:description" content="Radio Vibra Maturín - ¡Estremece tus sentidos!">
 		<meta content="yes" name="apple-mobile-web-app-capable">
 		<meta name="keywords" content="Vibra-Maturin, radiovibramaturin, vibramaturin, vibra maturin, radio vibra maturin, radio, musica, venezuela, cojedes, emisora, latina, romantico, informativa, divertida, integral, musical, latina, top40, fm, crossover, caribe, san carlos, caracas, valencia, maracay, republica, live, apple, blackberry, android, playstore, iphone, salsa, nuevo, retro, merengue, reguetton, varios, 24 horas, en vivo, activa, audio, player, instagram, facebook, youtube, x, tropical, @jesusfcoaponte, @radiovibramaturin, facebook, instagram, tiktok, whatsapp">
 	</head>
 
 	<style>A {text-decoration: none;}</style>
 
-	<body>
+	<body style="background-color: #00103b;">
 		<style type="text/css" background-image: url(img/banner-1.png);>
-			
 		</style>
-		<!-- Publicidad Superior 		<div class="slideshow-container">
-			<div class="mySlides fade">
-				<div class="numbertext"></div>
-				<a class="image featured"><img src="img/banner-1.png" style="width:90%">
-			</div>
-
-			<div class="mySlides fade">
-				<div class="numbertext"></div>
-				<a class="image featured"><img src="img/banner-2.png" style="width:90%">
-			</div>
-
-			<div class="mySlides fade">
-				<div class="numbertext"></div>
-				<a class="image featured"><img src="img/banner-3.png" style="width:90%">
-			</div>
-
-			<div class="mySlides fade">
-				<div class="numbertext"></div>
-				<a class="image featured"><img src="img/banner-4.png" style="width:90%">
-			</div>
-		</div>
-
-		 Publicidad Superior DOT
-		<div style="text-align:center">
-			<span class="dot"></span>
-			<span class="dot"></span>
-			<span class="dot"></span>
-			<span class="dot"></span>
-		</div>
-		-->
-
-		<iframe allowtransparency="yes" border="0" frameborder="no" width="100%" height="90%" marginheight="0px" marginwidth="0" scrolling="no" src="https://player.mipanel.stream/lunaplayer/6750" style="width:100%; height:90vh;">
-		</iframe>
-
-		<!-- widget-reloj
-		<div class="widget-reloj">
-			<iframe allowtransparency="yes" border="0" frameborder="no" height="100%" width="100%" marginheight="0px" marginwidth="0" scrolling="no" src="iframe/reloj.html" style="width:320px; height:100%;"></iframe>
-		</div>-->
+		
+		<div>        
+            <iframe allowtransparency="yes" border="0" frameborder="no" height="80px" width="100%" marginheight="0px" marginwidth="0" scrolling="yes" src="player/player-radiovibramaturin.html" style="width:100%; height:80vh">
+            </iframe>
+        </div>
 
 		<!-- Redes Sociales -->
         <div class="slideshow-container" style="text-align: center; line-height:0;">
@@ -113,10 +79,31 @@
             </a> -->
         </div>
 
-		<!-- Publicidad Inferior -->
+        <!-- Inicio Publicidad Inferior -->
 		<div class="slideshow-container">
-			<a href="#" target="_blank" class="image featured"><img src="img/publicidad-2.png" alt="" style="width:100%"></a>
+			<div class="mySlides fade">
+				<div class="numbertext"></div>
+				<a class="image featured"><img src="img/publicidad-1.png" style="width:100%">
+			</div>
+
+			<div class="mySlides fade">
+				<div class="numbertext"></div>
+				<a class="image featured"><img src="img/publicidad-2.png" style="width:100%">
+			</div>
+
+			<div class="mySlides fade">
+				<div class="numbertext"></div>
+				<a class="image featured"><img src="img/publicidad-3.png" style="width:100%">
+			</div>
+
 		</div>
+
+		<div style="text-align:center">
+			<span class="dot"></span>
+			<span class="dot"></span>
+			<span class="dot"></span>
+		</div>
+		<!-- Fin Publicidad Inferior -->
 
 		<!-- Elfsight Instagram Feed | Untitled Instagram Feed -->
 		<div>
@@ -146,7 +133,7 @@
 			  dots[slideIndex-1].className += " active";
 			  setTimeout(showSlides, 8000); // Change image every 2 seconds
 		}
-		</script>			
+		</script>		
 	</body>
 
     <!-- Footer -->
