--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-		<!-- Google tag (gtag.js)
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-M211RWMNEY"></script>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-S1E6ME9KCQ"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
-
-		  gtag('config', 'G-M211RWMNEY');
-		</script> -->
+		
+		  gtag('config', 'G-S1E6ME9KCQ');
+		</script>
         <title>.::Radio Vibra Maturín::.</title>
         <meta charset="utf-8">
    		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
